Currency: Fix alignment of image.

--- a/share/spice/currency/currency.css
+++ b/share/spice/currency/currency.css
@@ -28,7 +28,7 @@
 
     .is-mobile .zci--currency .tile--s img {
         height: 32px;
-        vertical-align: bottom;
+        vertical-align: top;
         border: 0.2em solid #d0d0d0;
         border-radius: 50%;
         background-color: #d0d0d0;
